--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    /* padding: 50px; */
     margin: 0;
     height: 100vh;
 }
@@ -17,7 +16,22 @@ body {
 
 .form {
     display: grid;
+    grid-template-columns: 60px 1fr;
     gap: 10px;
+}
+
+legend {
+    font-size: 1.15rem;
+    font-weight: 600;
+}
+
+.label {
+    grid-column: 1;
+    text-align: right;
+}
+
+.item {
+    grid-column: 2;
 }
 
 .footer {
@@ -35,4 +49,12 @@ body {
     display: grid;
     grid-template-columns: auto 100px 100px;
     gap: 15px;
+}
+
+hr {
+    width: 95%;
+    margin: auto;
+    background-color: rgb(12, 1, 116);
+    height: 1px;
+    border: 0;
 }
